# MicroProfileEngine

./: .clang-tidy  .gitignore  CMakeLists.txt  ExitTrigger.cpp  ExitTrigger.h  Makefile  ProfileDefinition.cpp  ProfileDefinition.h  ProfileGenerator.cpp  ProfileGenerator.h  README.md  Sampler.cpp  Sampler.h  SimplifiedProfileEngine.cpp  SimplifiedProfileEngine.h  main.cpp
include/: Dynamics.hpp  ExitTrigger.hpp  Profile.hpp  ProfileDefinition.hpp  ProfileGenerator.h  ProfileGenerator.hpp  Sampler.hpp  Sensor.h  Sensor.hpp  SimplifiedProfileEngine.hpp  Stage.hpp  engine.hpp  sensor.hpp  types.hpp
src/: CMakeLists.txt  Dynamics.cpp  ExitTrigger.cpp  Profile.cpp  ProfileDefinition.cpp  ProfileGenerator.cpp  Sampler.cpp  SimplifiedProfileEngine.cpp  Stage.cpp  engine.cpp  sensor.cpp  types.cpp
